[tool.poetry]
name = "python-json-example"
version = "0.1.0"
description = ""
authors = ["umt0120"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_json_example"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
